--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,6 @@ beautifulsoup4==4.12.3
 requests==2.31.0
 pandas==2.2.1
 google-generativeai==0.3.2
-python-dotenv==1.0.1 
+python-dotenv==1.0.1
+reportlab==4.1.0
+matplotlib==3.8.3 
