--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
 # API Configuration for Production
-REACT_APP_API_HOST=https://api.unischeduler.tech
+REACT_APP_API_HOST= "https://api.unischeduler.tech"
