--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-flask==3.0.2
-flask-cors==4.0.0
-beautifulsoup4==4.12.3
-requests==2.31.0
-pandas==2.2.1
-google-generativeai==0.3.2
-python-dotenv==1.0.1
-reportlab==4.1.0
-matplotlib==3.8.3 
+flask
+flask-cors
+beautifulsoup4
+requests
+pandas
+google-generativeai
+python-dotenv
+reportlab
+matplotlib
+google-genai
