--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
 # API Configuration for Production
-REACT_APP_API_HOST= "https://unischeduler.onrender.com"
+REACT_APP_API_HOST= "http://127.0.0.1:8080"
